--- a/hlbejk-service/src/main/resources/application-dev.yml
+++ b/hlbejk-service/src/main/resources/application-dev.yml
@@ -13,9 +13,9 @@ spring:
     timeout: 5000
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3307/yunyingjianguan?serverTimezone=GMT%2B8&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
-    username: root
-    password: 123456
+    url: jdbc:mysql://10.217.17.117:3316/yunyingjianguan?serverTimezone=GMT%2B8&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+    username: yyjg
+    password: yyjgpassword
     hikari:
       connection-timeout: 20000
       minimum-idle: 1
@@ -30,7 +30,7 @@ ribbon:
   ConnectTimeout: 30000
 
 auth:
-  need: true #是否对接auth，false为暂时不对接，true为开启对接
+  need: false #是否对接auth，false为暂时不对接，true为开启对接
   versions: auth1 #对接权限管理版本auth1、auth2，
   systemCode: template #本系统在auth的auth_system或者oauth_system中配置的system_code或者app_name
 
