监控表： 1、增加行政区划编码 2、增加返回地区合计 3、增加返回年月合计

--- a/hlbejk-service/src/main/resources/application-dev.yml
+++ b/hlbejk-service/src/main/resources/application-dev.yml
@@ -13,7 +13,7 @@ spring:
     timeout: 5000
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://10.217.17.117:3316/yunyingjianguan?serverTimezone=GMT%2B8&allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://10.217.17.117:3316/yunyingjianguan?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
     username: yyjg
     password: yyjgpassword
     hikari:
