--- a/hlbejk-service/src/main/resources/application-dev.yml
+++ b/hlbejk-service/src/main/resources/application-dev.yml
@@ -13,9 +13,12 @@ spring:
     timeout: 5000
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://10.217.17.117:3316/yunyingjianguan?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
-    username: yyjg
-    password: yyjgpassword
+#    url: jdbc:mysql://10.217.17.117:3316/yunyingjianguan?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+#    username: yyjg
+#    password: yyjgpassword
+    url: jdbc:mysql://127.0.0.1:3306/yunyingjianguan?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+    username: root
+    password: rsj19941219
     hikari:
       connection-timeout: 20000
       minimum-idle: 1
@@ -30,7 +33,7 @@ ribbon:
   ConnectTimeout: 30000
 
 auth:
-  need: false #是否对接auth，false为暂时不对接，true为开启对接
+  need: true #是否对接auth，false为暂时不对接，true为开启对接
   versions: auth1 #对接权限管理版本auth1、auth2，
   systemCode: template #本系统在auth的auth_system或者oauth_system中配置的system_code或者app_name
 
